2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strxnet.spec.in: make GPL version more obvious

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-timod.at: testsuite factoring
	* tests/testsuite-tirdwr.at: testsuite factoring
	* tests/testsuite-xnet.at: testsuite factoring
	* tests/testsuite-xnet_thr.at: testsuite factoring
	* tests/testsuite.at: testsuite factoring

2007-04-15  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: add options to ignore TPI servtype and TPI state
	* src/lib/xnet.c:  add options to ignore TPI servtype and TPI state

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo
	* src/modules/timod.c: make module ids static instead of dynamic
	* src/modules/tirdwr.c: make module ids static instead of dynamic

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/modules/timod.c: support for 2.6.20-1.2307.fc5
	* src/modules/tirdwr.c: support for 2.6.20-1.2307.fc5
	* src/modules/tpi_conv.c: support for 2.6.20-1.2307.fc5

	* src/modules/tirdwr.c: add D_MP flag

	* src/modules/timod.c: register qlock option
	* src/modules/tirdwr.c: register qlock option

2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* po/de.po: hate gnu gettext for this

	* doc/manual/news.texi: pushed release date
	* src/test/test-inet_raw.c: report failed expectations
	* src/test/test-inet_tcp.c: report failed expectations
	* src/test/test-inet_udp.c: report failed expectations
	* src/test/test-timod.c: report failed expectations