@@ -1,5 +1,8 @@
 2007-05-07  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/drivers/ip.c: corrections from release testing
+	* src/drivers/np_ip.c: corrections from release testing
+	* src/test/test-np_ip.c: corrections from release testing
 	* tests/kernel.at: correction to module test for new distros
 	* AUTHORS: updated release files
 	* doc/manual/news.texi: updated release files
