@@ -1,5 +1,6 @@
 2007-05-07  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/test/test-tirdwr.c: corrections from release testing
 	* tests/kernel.at: correction to module test for new distros
 	* AUTHORS: updated release files
 	* doc/manual/news.texi: updated release files
